proj2/test/test_11712009_8.out
Error type 13 at Line 2: Not Structure.
Error type 5 at Line 2: Two sides of assignment have inconsistent type.
