proj2/test/test_11712009_8.spl
int main(int a, int b) {
    int f = a.nonexist;
}